Fixed alignment issue on salary label and qualificaiton

--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewSalaryListSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/viewSalaryListSuccess.css
@@ -117,6 +117,7 @@ div#licenseMessagebar {
 
 label {
     margin-top: 5px;
+    width: 140px;
 }
 
 
